# tesina

./: ..git_ignore.kate-swp  .git_ignore  .gitignore  README.md
Manu/TP Numerico/: tp.aux  tp.run.xml  tp.tex.backup
Manu/Tramos Revestidos/: 1.tex  1.tex.backup  1r.tex  2.tex  2r.tex  3.tex  3.tex.backup  cond.tex  tr.aux  tr.run.xml  tr.tex  tr.tex.backup  vmax1.tex  vmax2.tex  vmax3.tex  vmax3.tex.backup
My-Bag-of-Words/: gen_sets.py  learn.py  load_sets.py  multi_classify.py  multi_learn.py
Papeles/Borrador Tesina/: Makefile  cites.bib  clustering.tex  met.tex  mot.tex  tesis0.tex
Papeles/Propuesta/: Makefile  carta.tex  cites.bib  fundyestarte.tex  met.tex  mot.tex  motyobjgen.tex  nuevacarta.tex  objesp.tex  objgen.tex  plantrab.tex  propuesta.tex
TP Numerico/: TP.sce  tp.tex
codigo/resultados/: 1thread_8_50.txt  accuracy.txt  analisis.txt  corrida_1000_checkeado.txt  corrida_5000.txt  corrida_8_1000.txt  corrida_8_10000.txt  corrida_8_50.txt  corrida_8_500.txt  corrida_8_5000.txt
codigo/rugbymofreak/: 1.test  createLowResVideo.sh  infoOriginalVideo.sh  infoOriginalVideo.sh~  renameCuredVideos.sh  renameVideosMartin.sh  runRugbyMoFREAK_8groups.sh  tt.txt
codigo/rugbymofreak/src/: classification_tests.py
codigo/rugbymofreak/src/boost/lib/: libboost_chrono.so.1.51.0  libboost_context.so.1.51.0  libboost_date_time.so.1.51.0  libboost_filesystem.so.1.51.0  libboost_iostreams.so.1.51.0  libboost_math_c99l.so.1.51.0  libboost_math_tr1.so.1.51.0  libboost_math_tr1f.so.1.51.0  libboost_math_tr1l.so.1.51.0  libboost_prg_exec_monitor.so.1.51.0  libboost_regex.so.1.51.0  libboost_serialization.so.1.51.0  libboost_system.so.1.51.0  libboost_timer.so.1.51.0  libboost_unit_test_framework.so.1.51.0  libboost_wserialization.so.1.51.0
codigo/rugbymofreak/src/opencv/lib/: libopencv_core.so.2.4  libopencv_flann.so.2.4.9  libopencv_gpu.so.2.4.9  libopencv_highgui.so.2.4.9  libopencv_legacy.so.2.4  libopencv_ml.so.2.4.9  libopencv_nonfree.so.2.4.9  libopencv_objdetect.so.2.4.9  libopencv_ocl.so.2.4  libopencv_photo.so.2.4.9  libopencv_stitching.so.2.4
codigo/rugbymofreak/src/opencv/lib/pkgconfig/: opencv.pc
codigo/rugbymofreak/src/opencv/share/OpenCV/: OpenCVModules-release.cmake
codigo/rugbymofreak/src/rugbymofreak/: .directory  BagOfWordsRepresentation.cpp  BagOfWordsRepresentation.h  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.00a741d.3.0-pre1  Clustering.cpp  Clustering.h  Makefile  MoFREAKUtilities.cpp  MoFREAKUtilities.h  MoSIFTUtilities.h  SVMInterface.cpp  brisk.cpp  cmake_install.cmake  main.cpp  svm_interface.cpp  vcxproj2cmake.pl
